--- a/modules/Utilities/pom.xml
+++ b/modules/Utilities/pom.xml
@@ -27,6 +27,13 @@
             <artifactId>jsr305</artifactId>
             <scope>provided</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
