--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,18 @@
                 <artifactId>it-tidalwave-util-test</artifactId>
                 <version>1.0.8-SNAPSHOT</version>
             </dependency>
+
+            <dependency>
+                <groupId>it.tidalwave.thesefoolishthings</groupId>
+                <artifactId>it-tidalwave-thesefoolishthings-examples-finderexample1</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>it.tidalwave.thesefoolishthings</groupId>
+                <artifactId>it-tidalwave-thesefoolishthings-examples-finderexample2</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
