--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -31,6 +31,7 @@
     <modules>
         <module>FinderExample1</module>
         <module>FinderExample2</module>
+        <module>FinderExample3</module>
     </modules>
 
 </project>
