--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,11 @@
                 <artifactId>it-tidalwave-thesefoolishthings-examples-finderexample2</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>it.tidalwave.thesefoolishthings</groupId>
+                <artifactId>it-tidalwave-thesefoolishthings-examples-finderexample3</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
