--- a/modules/examples/pom.xml
+++ b/modules/examples/pom.xml
@@ -7,7 +7,7 @@
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
         <version>1.10.0-SNAPSHOT</version>
-        <relativePath>../modules</relativePath>
+        <relativePath>..</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
