Fix for THESEFOOLISHTHINGS-43.

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -56,6 +56,11 @@
                 <artifactId>org.incava.util.diff</artifactId>
                 <version>1.1.0</version>
             </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>0.9.3</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
