--- a/modules/examples/FinderExample2/pom.xml
+++ b/modules/examples/FinderExample2/pom.xml
@@ -27,5 +27,10 @@
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
