--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -42,6 +42,14 @@
                 <!-- WARNING: don't use 1.3.8, it has got a broken pom which brings is tons of useless stuff! -->
             </dependency>
             <dependency>
+                <groupId>it.tidalwave.superpom</groupId>
+                <artifactId>platform11</artifactId>
+                <version>${netbeans.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            
+            <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.8.2</version>
