--- a/modules/Utilities/pom.xml
+++ b/modules/Utilities/pom.xml
@@ -56,6 +56,7 @@
                         <publicPackage>it.tidalwave.util</publicPackage>
                         <publicPackage>it.tidalwave.util.spi</publicPackage>
                         <publicPackage>it.tidalwave.role</publicPackage>
+                        <publicPackage>it.tidalwave.role.ui</publicPackage>
                         <publicPackage>it.tidalwave.role.spi</publicPackage>
                         <publicPackage>it.tidalwave.role.annotation</publicPackage>
                         <publicPackage>it.tidalwave.text</publicPackage>
