--- a/modules/Utilities/pom.xml
+++ b/modules/Utilities/pom.xml
@@ -21,6 +21,23 @@
     </properties>
 
     <dependencies>
+        <!-- Only for NbBundle -->
+        <dependency>
+            <groupId>org.netbeans.api</groupId>
+            <artifactId>org-openide-util</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.netbeans.api</groupId>
+                    <artifactId>org-openide-util-lookup</artifactId>
+                </exclusion>    
+            </exclusions>
+        </dependency>
+        <!-- Needed in compilation, because of the annotation processor -->
+        <dependency>
+            <groupId>org.netbeans.api</groupId>
+            <artifactId>org-openide-util-lookup</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <!-- These dependencies with 'provided' scope won't be embedded in the .nbm -->
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
