--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -41,6 +41,14 @@
                 <version>1.3.7</version>
                 <!-- WARNING: don't use 1.3.8, it has got a broken pom which brings is tons of useless stuff! -->
             </dependency>
+
+            <dependency>
+                <groupId>it.tidalwave.superpom</groupId>
+                <artifactId>platform12</artifactId>
+                <version>${netbeans.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             
             <dependency>
                 <groupId>junit</groupId>
