--- a/modules/examples/pom.xml
+++ b/modules/examples/pom.xml
@@ -16,6 +16,15 @@
     <version>1.0.3-SNAPSHOT</version>
     <name>TheseFoolishThings Examples (master)</name>
 
+    <dependencies>
+        <!-- Needed in compilation, because of the annotation processor -->
+        <dependency>
+            <groupId>org.netbeans.api</groupId>
+            <artifactId>org-openide-util-lookup</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+        
     <build>
         <plugins>
             <plugin>
