--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -51,15 +51,11 @@
             </dependency>
             
             <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.8.2</version>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.mockito</groupId>
-                <artifactId>mockito-all</artifactId>
-                <version>1.8.5</version>
-            </dependency>
+            
             <dependency>
                 <groupId>org.incava</groupId>
                 <artifactId>org.incava.util.diff</artifactId>
