--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>superpom</artifactId>
-        <version>1.0.22-SNAPSHOT</version>
+        <version>1.0.23</version>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
