--- a/modules/Beans/pom.xml
+++ b/modules/Beans/pom.xml
@@ -18,12 +18,13 @@
 
     <dependencies>
         <dependency>
-            <groupId>it.tidalwave.thesefoolishthings</groupId>
-            <artifactId>it-tidalwave-util-logging</artifactId>
+            <groupId>com.kenai.nbpwr</groupId>
+            <artifactId>org-jdesktop-beansbinding</artifactId>
         </dependency>
         <dependency>
             <groupId>com.kenai.nbpwr</groupId>
-            <artifactId>org-jdesktop-beansbinding</artifactId>
+            <artifactId>org-slf4j-jdk14</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.kenai.nbpwr</groupId>
