--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -34,6 +34,11 @@
                 <artifactId>javax-annotation</artifactId>
                 <version>1.3.7-201002241900</version>
             </dependency>
+            <dependency>
+                <groupId>com.kenai.nbpwr</groupId>
+                <artifactId>org-slf4j-jdk14</artifactId>
+                <version>1.6.1-201106101300</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.google.code.findbugs</groupId>
