--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>superpom</artifactId>
-        <version>1.0.24-SNAPSHOT</version>
+        <version>1.0.24</version>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
@@ -201,6 +201,7 @@
 
     <modules>
         <module>modules</module>
+        <module>archetypes/project</module>
     </modules>
 
 </project>
