--- a/archetypes/project/pom.xml
+++ b/archetypes/project/pom.xml
@@ -38,8 +38,8 @@
     <artifactId>project-archetype</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
-    <name>TheseFoolishThings Project Archetype</name>
-    <description>TheseFoolishThings Project Archetype</description>
+    <name>TheseFoolishThings - Project Archetype</name>
+    <description>TheseFoolishThings - Project Archetype</description>
 
     <build>
         <extensions>
