--- a/archetypes/project/pom.xml
+++ b/archetypes/project/pom.xml
@@ -44,20 +44,15 @@
     <build>
         <extensions>
             <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-webdav-jackrabbit</artifactId>
-                <version>1.0-beta-5</version>
-            </extension>
-            <extension>
                 <groupId>org.apache.maven.archetype</groupId>
                 <artifactId>archetype-packaging</artifactId>
-                <version>2.0-alpha-4</version>
+                <version>${tft.archetype-packaging.version}</version>
             </extension>
         </extensions>
         <plugins>
             <plugin>
                 <artifactId>maven-archetype-plugin</artifactId>
-                <version>2.0-alpha-4</version>
+                <version>${tft.maven-archetype-plugin.version}</version>
                 <extensions>true</extensions>
             </plugin>
         </plugins>
