Fix for THESEFOOLISHTHINGS-58.

--- a/archetypes/project/src/main/resources/archetype-resources/modules/Module1/pom.xml
+++ b/archetypes/project/src/main/resources/archetype-resources/modules/Module1/pom.xml
@@ -15,7 +15,7 @@
 
     <groupId>${groupId}</groupId>
     <artifactId>${groupId}.module1</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <version>${version}</version>
     <name>${projectName} - Module 1</name>
     <description>${projectName} - Module 1</description>
