--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         
         <tft.UmlGraphDoc.additionalParam>-views -attributes -operations -types -postfixpackage -nodefontpackagesize 6 -nodefontclasssize 8 -nodefontsize 7 -edgefontsize 7 -nodesep 0.05 -ranksep 0.1 -visibility -inferrel -hide java.*|javax.*</tft.UmlGraphDoc.additionalParam>
        
-        <tft.javac.source>1.5</tft.javac.source>
+        <tft.javac.source>1.5</tft.javac.source> <!-- For Android compatibility -->
         <tft.javac.target>1.5</tft.javac.target>
         
         <tft.maven-archetype-plugin.version>2.0-alpha-5</tft.maven-archetype-plugin.version> <!-- FIXME: push up -->
