--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <inceptionYear>2009</inceptionYear>
 
     <properties>
-        <scm.repo.url>ssh://fabriziogiudici@hg.kenai.com/thesefoolishthings~src</scm.repo.url>
+        <scm.repo.url>ssh://hg.kenai.com/thesefoolishthings~src</scm.repo.url>
         <scm.repo.readonly.url>http://kenai.com/hg/thesefoolishthings~src</scm.repo.readonly.url>
         <scm.repo.browse.url>http://kenai.com/projects/thesefoolishthings/sources/src/show</scm.repo.browse.url>
 
