--- a/modules/SpringEventBus/pom.xml
+++ b/modules/SpringEventBus/pom.xml
@@ -35,5 +35,10 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
