Fix for THESEFOOLISHTHINGS-61.

--- a/archetypes/project/src/main/resources/archetype-resources/.hgignore
+++ b/archetypes/project/src/main/resources/archetype-resources/.hgignore
@@ -1,10 +1,10 @@
 target
-.repository
-.revision
-.classpath
-.project
-.settings
-release.properties
+\.repository
+\.description
+\.classpath
+\.project
+\.settings
+release\.properties
 \.orig\..*$
 \.orig$
 \.chg\..*$
