--- a/modules/Logger/pom.xml
+++ b/modules/Logger/pom.xml
@@ -7,6 +7,7 @@
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
         <version>1.18-SNAPSHOT</version>
+        <relativePath>..</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
