Fix for THESEFOOLISHTHINGS-68.

--- a/modules/SpringEventBus/pom.xml
+++ b/modules/SpringEventBus/pom.xml
@@ -16,7 +16,11 @@
     <packaging>jar</packaging>
     <name>TheseFoolishThings - EventBus (Spring)</name>
     <description>TheseFoolishThings - EventBus (Spring)</description>
-    
+   
+    <properties>
+        <tft.javadoc.excludePackageNames></tft.javadoc.excludePackageNames>
+    </properties>
+ 
     <dependencies>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
