--- a/archetypes/project/src/main/resources/archetype-resources/modules/pom.xml
+++ b/archetypes/project/src/main/resources/archetype-resources/modules/pom.xml
@@ -10,7 +10,7 @@
         <groupId>${groupId}</groupId>
         <artifactId>${rootArtifactId}</artifactId>
         <version>${version}</version>
-        <relativePath>..</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>${groupId}</groupId>
