--- a/modules/examples/FinderExample2/pom.xml
+++ b/modules/examples/FinderExample2/pom.xml
@@ -6,7 +6,7 @@
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>thesefoolishthings-examples</artifactId>
         <version>1.0.9-SNAPSHOT</version>
-        <relativePath>..</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
