--- a/modules/examples/FinderExample3/pom.xml
+++ b/modules/examples/FinderExample3/pom.xml
@@ -31,6 +31,7 @@
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
