--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <netbeans.version>RELEASE70</netbeans.version>
         <org.springframework.version>3.0.5.RELEASE</org.springframework.version>
         <tft.lombok.version>0.10.1</tft.lombok.version>
+        <tft.maven-release-plugin.version>2.1</tft.maven-release-plugin.version> <!-- 2.2 tagNameFormat broken, see http://jira.codehaus.org/browse/MRELEASE-695 -->
+
         <slf4j.version>1.6.1</slf4j.version>
         
         <tft.UmlGraphDoc.additionalParam>-views -attributes -operations -types -postfixpackage -nodefontpackagesize 6 -nodefontclasssize 8 -nodefontsize 7 -edgefontsize 7 -nodesep 0.05 -ranksep 0.1 -visibility -inferrel -hide java.*|javax.*</tft.UmlGraphDoc.additionalParam>
