--- a/modules/MessageBus/src/main/resources/it/tidalwave/messagebus/Bundle.properties
+++ b/modules/MessageBus/src/main/resources/it/tidalwave/messagebus/Bundle.properties
@@ -1,7 +1,7 @@
 #***********************************************************************************************************************
 #*
-#* SolidBlue - open source safe data
-#* Copyright (C) 2011-2011 by Tidalwave s.a.s. (http://www.tidalwave.it)
+#* These Foolish Things - Miscellaneous utilities
+#* Copyright (C) 2009-2011 by Tidalwave s.a.s. (http://www.tidalwave.it)
 #*
 #***********************************************************************************************************************
 #*
@@ -16,10 +16,11 @@
 #*
 #***********************************************************************************************************************
 #*
-#* WWW: http://solidblue.java.net
-#* SCM: https://bitbucket.org/tidalwave/solidblue-src
+#* WWW: http://thesefoolishthings.java.net
+#* SCM: https://bitbucket.org/tidalwave/thesefoolishthings-src
 #*
 #***********************************************************************************************************************
+#
 
 OpenIDE-Module-Name: MessageBus
 OpenIDE-Module-Display-Category: TheseFoolishThings
