--- a/modules/SingleLineLogFormatter/src/main/resources/it/tidalwave/util/logging/Bundle.properties
+++ b/modules/SingleLineLogFormatter/src/main/resources/it/tidalwave/util/logging/Bundle.properties
@@ -16,9 +16,11 @@
 #*
 #***********************************************************************************************************************
 #*
-#* WWW: http://thesefoolishthings.kenai.com
-#* SCM: http://kenai.com/hg/thesefoolishthings~src
+#* WWW: http://thesefoolishthings.java.net
+#* SCM: https://bitbucket.org/tidalwave/thesefoolishthings-src
 #*
 #***********************************************************************************************************************
+#
+
 OpenIDE-Module-Display-Category: TheseFoolishThings
 OpenIDE-Module-Name: TheseFoolishThings - SingleLineLogFormatter
