--- a/modules/Beans/src/test/resources/it/tidalwave/beans/log.properties
+++ b/modules/Beans/src/test/resources/it/tidalwave/beans/log.properties
@@ -16,10 +16,12 @@
 #*
 #***********************************************************************************************************************
 #*
-#* WWW: http://thesefoolishthings.kenai.com
-#* SCM: http://kenai.com/hg/thesefoolishthings~src
+#* WWW: http://thesefoolishthings.java.net
+#* SCM: https://bitbucket.org/tidalwave/thesefoolishthings-src
 #*
 #***********************************************************************************************************************
+#
+
 java.util.logging.FileHandler.level = ALL
 java.util.logging.FileHandler.pattern = log/test.log
 java.util.logging.FileHandler.limit = 10000000
