Fixed module name.

--- a/modules/MessageBus/src/main/resources/it/tidalwave/messagebus/Bundle.properties
+++ b/modules/MessageBus/src/main/resources/it/tidalwave/messagebus/Bundle.properties
@@ -22,5 +22,5 @@
 #***********************************************************************************************************************
 #
 
-OpenIDE-Module-Name: MessageBus
+OpenIDE-Module-Name: TheseFoolihThings - MessageBus
 OpenIDE-Module-Display-Category: TheseFoolishThings
