--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -25,6 +25,11 @@
                 <version>1.2.1-201007271250</version>
             </dependency>
             <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin</artifactId>
+                <version>${vaadin.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.kenai.nbpwr</groupId>
                 <artifactId>net-sf-cglib</artifactId>
                 <version>2.1.3-201002241208</version>
@@ -115,6 +120,7 @@
         <module>StopWatch</module>
         <module>Utilities</module>
         <module>TestUtilities</module>
+        <module>Vaadin</module>
         <module>examples</module>
     </modules>
 
