--- a/modules/Vaadin/pom.xml
+++ b/modules/Vaadin/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.vaadin.addons</groupId>
+            <artifactId>refresher</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
     
 </project>
