--- a/modules/Vaadin/pom.xml
+++ b/modules/Vaadin/pom.xml
@@ -16,7 +16,14 @@
     <packaging>jar</packaging>
     <name>TheseFoolishThings - Vaadin Enhancements</name>
     <description>TheseFoolishThings - Vaadin Enhancements</description>
-    
+   
+    <repositories>
+        <repository>
+            <id>vaadin-addons</id>
+            <url>http://maven.vaadin.com/vaadin-addons</url>
+        </repository>
+    </repositories>
+ 
     <dependencies>
         <dependency>
             <groupId>com.vaadin</groupId>
