--- a/modules/SpringMessageBus/pom.xml
+++ b/modules/SpringMessageBus/pom.xml
@@ -11,11 +11,11 @@
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
-    <artifactId>it-tidalwave-eventbus-spring</artifactId>
+    <artifactId>it-tidalwave-messagebus-spring</artifactId>
     <version>1.0.6-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>TheseFoolishThings - EventBus (Spring)</name>
-    <description>TheseFoolishThings - EventBus (Spring)</description>
+    <name>TheseFoolishThings - MessageBus (Spring)</name>
+    <description>TheseFoolishThings - MessageBus (Spring)</description>
    
     <dependencies>
         <dependency>
