--- a/modules/SpringMessageBus/pom.xml
+++ b/modules/SpringMessageBus/pom.xml
@@ -16,7 +16,11 @@
     <packaging>jar</packaging>
     <name>TheseFoolishThings - MessageBus (Spring)</name>
     <description>TheseFoolishThings - MessageBus (Spring)</description>
-   
+  
+    <properties>
+        <tft.javadoc.excludePackageNames></tft.javadoc.excludePackageNames>
+    </properties>
+ 
     <dependencies>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
