--- a/modules/MessageBus/pom.xml
+++ b/modules/MessageBus/pom.xml
@@ -43,10 +43,35 @@
                 <configuration>
                     <publicPackages>
                         <publicPackage>it.tidalwave.messagebus</publicPackage>
+                        <publicPackage>it.tidalwave.messagebus.annotation</publicPackage>
                         <publicPackage>it.tidalwave.messagebus.spi</publicPackage>
                     </publicPackages>
                 </configuration>
             </plugin>
         </plugins>
-    </build> 
+    </build>
+    <profiles>
+        <profile>
+            <id>netbeans-private-testng</id>
+            <activation>
+                <property>
+                    <name>netbeans.testng.action</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.11</version>
+                        <configuration>
+                            <suiteXmlFiles>
+                                <suiteXmlFile>target/nb-private/testng-suite.xml</suiteXmlFile>
+                            </suiteXmlFiles>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
