--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,13 @@
         <scm.repo.readonly.url>https://bitbucket.org/tidalwave/thesefoolishthings-src</scm.repo.readonly.url>
         <scm.repo.browse.url>https://bitbucket.org/tidalwave/thesefoolishthings-src/src</scm.repo.browse.url>
 
-        <vaadin.version>6.6.1</vaadin.version>
-        <netbeans.version>RELEASE70</netbeans.version>
+        <javax-inject.version>1.0-201002241208</javax-inject.version>
+        <joda-time.version>1.6.2-201110292322</joda-time.version>
+        <netbeans.version>RELEASE712</netbeans.version>
         <org.springframework.version>3.0.5.RELEASE</org.springframework.version>
-
         <slf4j.version>1.6.1</slf4j.version>
+        <uuid.version>2.1.5-201007271250</uuid.version>
+        <vaadin.version>6.6.1</vaadin.version>
         
         <tft.UmlGraphDoc.additionalParam>-views -attributes -operations -types -postfixpackage -nodefontpackagesize 6 -nodefontclasssize 8 -nodefontsize 7 -edgefontsize 7 -nodesep 0.05 -ranksep 0.1 -visibility -inferrel -hide java.*|javax.*</tft.UmlGraphDoc.additionalParam>
        
@@ -97,6 +99,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>it.tidalwave.thesefoolishthings</groupId>
+                <artifactId>it-tidalwave-actor</artifactId>
+                <version>1.0.9-SNAPSHOT</version>
+            </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
                 <artifactId>it-tidalwave-util</artifactId>
