--- a/modules/NetBeansEventBusAdapter/pom.xml
+++ b/modules/NetBeansEventBusAdapter/pom.xml
@@ -55,5 +55,20 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    
+   
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>nbm-maven-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <publicPackages>
+                        <publicPackage>it.tidalwave.messagebus.netbeans.platformx.eventbus</publicPackage>
+                    </publicPackages>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+ 
 </project>
