Partial fix for THESEFOOLISHTHINGS-94.

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -98,8 +98,29 @@
            
             <dependency>
                 <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
+                <version>${org.springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${org.springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
                 <version>${org.springframework.version}</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjrt</artifactId>
+                <version>${tft.aspectjrt.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>${tft.aspectjrt.version}</version>
             </dependency>
  
             <dependency>
@@ -155,6 +176,7 @@
         <module>Logger</module>
         <module>SingleLineLogFormatter</module>
         <module>SpringMessageBus</module>
+        <module>SpringRoles</module>
         <module>StopWatch</module>
         <module>Utilities</module>
         <module>TestUtilities</module>
