--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,11 @@
                 <artifactId>it-tidalwave-ui-vaadin</artifactId>
                 <version>1.0.10-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>it.tidalwave.thesefoolishthings</groupId>
+                <artifactId>it-tidalwave-role-spring</artifactId>
+                <version>1.0.36-SNAPSHOT</version>
+            </dependency>
 
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
